# This file is part of libfabric. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/libfabric/master/COPYRIGHT. No part of libfabric, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of libfabric. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/libfabric/master/COPYRIGHT.


[package]
name = "libfabric-sys"
description = "libfabric FFI bindings"
keywords = ["libfabric", "ffi", "RDMA", "RoCE", "Infiniband"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/libfabric/blob/master/README.md"
homepage = "https://github.com/lemonrock/libfabric"
repository = "https://github.com/lemonrock/libfabric.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml", "lib/**/*", "src/**/*.h", "tools/**/*", "bindgen-wrapper.conf.d/**/*", "compile-*.conf.d/**/*"]
build = "src/build.rs"
# Relative to Cargo.toml
readme = "README.md"
publish = true
version = "0.0.3"

[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"
